@@ -1,5 +1,13 @@
 2002-02-14  Ian Lance Taylor  <ian@airs.com>
 
+	* John Hughes: uuconf.h (struct uuconf_system): Add
+	uuconf_cmax_file_time field.
+	* uuconf/syssub.c (SYSTEM_INTEGERS): Add cmax_file_time.
+	* uuconf/tsinfo.c (asIcmds): Add max-file-time command.
+	* trans.c (floop): Check maximum file send time.
+	* uuchk.c (ukshow): Print maximum file send time.
+	* uucp.texi (File Transfer Control): Document max-file-time.
+
 	* send.c (flocal_send_await_reply): Only seek to the end of the
 	file if we are already sending it.
 
